--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bootstrap": "^4.5.0",
     "font-awesome": "^4.7.0",
     "fullcalendar": "^5.2.0",
+    "history": "^5.0.0",
     "jquery": "^3.5.1",
     "jquery-slimscroll": "^1.3.8",
     "jquery-sticky-kit": "^1.1.3",
@@ -50,16 +51,20 @@
     "react-input-mask": "^2.0.4",
     "react-owl-carousel": "^2.3.1",
     "react-popper": "^2.2.3",
-    "react-redux": "^7.2.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-scrollspy-nav": "^1.2.4",
     "react-slick": "^0.27.7",
+    "react-social-login-buttons": "^3.1.0",
     "react-sticky": "^6.0.3",
     "react-sticky-box": "^0.9.3",
     "react-summernote": "^2.0.2",
     "reactstrap": "^8.5.1",
     "recharts": "^1.8.5",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
     "sticky-kit": "^1.1.3",
     "sticky-sidebar": "^3.3.1",
